add config on fields
