# back/modules/generated/app/be/frol/chaman/openapi/api/DatatypesApi.scala
@@ -2,7 +2,7 @@ package be.frol.chaman.openapi.api
 
 import play.api.libs.json._
 import scala.concurrent.Future
-import be.frol.chaman.openapi.model.FieldType
+import be.frol.chaman.openapi.model.FieldConfig
 import play.api.mvc._
 
 @javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"))
@@ -10,6 +10,6 @@ trait DatatypesApi {
   /**
     * get data type
     */
-  def getDataTypes()(implicit request:Request[AnyContent]): Future[List[FieldType]]
+  def getDataTypes()(implicit request:Request[AnyContent]): Future[List[FieldConfig]]
 
 }
