# back/modules/generated/app/be/frol/chaman/openapi/api/DatatypesApiController.scala
@@ -5,7 +5,7 @@ import javax.inject.{Inject, Singleton}
 import play.api.libs.json._
 import play.api.mvc._
 import scala.concurrent.{ExecutionContext, Future}
-import be.frol.chaman.openapi.model.FieldType
+import be.frol.chaman.openapi.model.FieldConfig
 
 @javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"))
 @Singleton
@@ -14,7 +14,7 @@ class DatatypesApiController @Inject()(cc: ControllerComponents, api: DatatypesA
     * GET /api/data-types/
     */
   def getDataTypes(): Action[AnyContent] = Action.async { request =>
-    def executeApi(): Future[List[FieldType]] = {
+    def executeApi(): Future[List[FieldConfig]] = {
       api.getDataTypes()(request)
     }
 
