# back/modules/generated/app/be/frol/chaman/openapi/api/FieldApi.scala
@@ -4,13 +4,15 @@ import play.api.libs.json._
 import scala.concurrent.Future
 import be.frol.chaman.openapi.model.Field
 import play.api.mvc._
+import be.frol.chaman.openapi.model.FieldConfig
+import play.api.mvc._
 
 @javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"))
 trait FieldApi {
   /**
     * create a field
     */
-  def createField(field: Field)(implicit request:Request[AnyContent]): Future[Field]
+  def createField(fieldConfig: FieldConfig)(implicit request:Request[AnyContent]): Future[Field]
 
 
   /**
@@ -26,8 +28,14 @@ trait FieldApi {
 
 
   /**
+    * get a field config
+    */
+  def getFieldConfig(uuid: String)(implicit request:Request[AnyContent]): Future[FieldConfig]
+
+
+  /**
     * update a field
     */
-  def updateField(uuid: String, field: Field)(implicit request:Request[AnyContent]): Future[Field]
+  def updateField(uuid: String, fieldConfig: FieldConfig)(implicit request:Request[AnyContent]): Future[Field]
 
 }
